Large update after go-live
Google analytics
Logos
RRID

--- a/src/pages/arboviruses.html
+++ b/src/pages/arboviruses.html
@@ -108,7 +108,7 @@
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">A literature-based dataset of bird species hosts of or susceptible to MDBs.</p>
+          <p class="vf-summary__text">A literature-based dataset of bird species hosts of or susceptible to MDBs</p>
           <!--<p><a label="1 record" href="./literature.html" class="vf-link">1 literature-based dataset  ></a></p>-->
         </article>
 		<article class="vf-summary vf-u-padding__right--600">
@@ -202,9 +202,9 @@
         </div>
       </section>
       <div class="vf-component__container">
-        <a label="Share new pathogens data" [routerLink]="['/submit-data']" class="vf-box vf-box--is-link vf-box--normal vf-u-background-color--red--dark" href="./sharedata.html">
+        <a label="Share new pathogens data" [routerLink]="['/submit-data']" class="vf-box vf-box--is-link vf-box--normal vf-u-background-color--green--dark" href="mailto:pathogensportalnl@erasmusmc.nl">
           <h3 class="vf-box__heading">Share new pathogens data  ></h3> 
-          <p class="vf-box__text vf-text-body--2">Contact our curator teams, who will assist you with submitting your data></p>
+          <p class="vf-box__text vf-text-body--2" style="color: white;">Contact our curator team, who will assist you with submitting your data.</p>
         </a>
       </div>
     </div>
