--- a/src/pages/citeus.html
+++ b/src/pages/citeus.html
@@ -3,47 +3,32 @@
 	<br>
 	<br>
 
-	      <div class="vf-component__container">
-        <a label="Share new pathogens data" [routerLink]="['/submit-data']" class="vf-box vf-box--is-link vf-box--normal vf-u-background-color--green--dark" href="mailto:pathogensportalnl@erasmusmc.nl">
-          <h3 class="vf-box__heading">Share new pathogens data  ></h3> 
-          <p class="vf-box__text vf-text-body--2" style="color: white;">Contact our curator team, who will assist you with submitting your data.</p>
-        </a>
-      </div>
-	
-	<p>
 
-<h3>Share data</h3>
-<p>We encourage the Dutch research community to share their data in line with the FAIR1 Data Principles, to promote Findability, Accessibility, Interoperability, and Reusability of research data. 
-You can do this by depositing your research data with publicly accessible digital repositories that are part of evaluation-based initiatives and accreditation processes2,3. This portal helps you identify recommended databases for depositing your data, ensuring compliance with best practices in data sharing. 
-<p>You can explore these resources here:</p>
+<h3>How to cite the Portal</h3>
+<p>In line with the principles of FAIR and Open Science, we encourage the reuse and recognition of material made available on the Pathogens Portal Netherlands. On this page, you will find information about how to cite the portal when reusing and referencing the content. Please note that the information on the portal is updated continuously, therefore it is important to refer to specific versions (or to provide access dates) within citations.</p>
 
-
-
+<h3>Citing website content - Research Resource Identifier of Pathogens Portal Netherlands</h3>
+<p>The Resource Identification Portal was created in support of the Resource Identification Initiative. It aims to promote the identification, discovery, and reuse of research resources. Research Resource Identifiers (RRIDs) are persistent and unique identifiers for referencing a research resource. By citing the portal using the RRID, you will facilitate further reuse of the portal, enable us to track that activity, and allow others to easily find the Summary Report for usage of the Pathogens Portal Netherlands. Where datasets were used to conduct research, please acknowledge the original authors and their primary publications that are associated with the datasets.</p>
 <p>
-<a href="https://fairsharing.org/search?fairsharingRegistry=Database"> FAIRsharing: Databases</a>
+<a href="https://rrid.site/data/record/nlx_144509-1/SCR_026710/resolver?q=026710&l=026710&i=rrid:scr_026710">The RRID for the Pathogens Portal Netherlands is SCR_026710.</a>
 </p>
+
 <p>
-<a href="https://elixir-europe.org/platforms/data/elixir-deposition-databases"> ELIXIR Deposition Databases for Biomolecular Data</a>
+<a href="https://scicrunch.org/resources/about/guidelines">SciCrunch page guide on RRID citations.</a>
 </p>
  
+ <p></p>
+
+ <h3>Journalists</h3>
+ <p>
+Journalists are welcome to reuse images, content, or other material from the Pathogens Portal Netherlands for articles, blogs, social media etc., provided that the portal is acknowledged. Please refer to the portal as the Pathogens Portal Netherlands and link to our webpage https://www.pathogensportal.nl when you use content from the portal. You may also include our RRID: SCR_026710 (see above for information on RRIDs).
 </p>
 <br>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Numbered List</title>
-</head>
-<body>
-    <ol>
-        <li>Wilkinson MD, Dumontier M, Aalbersberg IJ, Appleton G, Axton M, Baak A, et al. The FAIR Guiding Principles for scientific data management and stewardship. Sci Data. 2016;3:160018.</li>
-        <li>Lin D, Crabtree J, Dillo I, Downs RR, Edmunds R, Giaretta D, et al. The TRUST Principles for digital repositories. Sci Data. 2020;7(1):144.</li>
-        <li>ELIXIR. ELIXIR Core Data Resources: ELIXIR Europe; <a href="https://elixir-europe.org/platforms/data/core-data-resources/" target="_blank">Available from: https://elixir-europe.org/platforms/data/core-data-resources/</a></li>
-    </ol>
-</body>
 
 
-<br>
-<br>
+
+
+
 <br>
 <br>
 <!-- <div class="vf-body">
