--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -8,6 +8,17 @@
   -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" media="all" href="./css/styles.css" />
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1T1R6MPCGP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1T1R6MPCGP');
+</script>
+
 </head>
 <body class="vf-body | vf-content">
 <div class="vf-body" id="topAnchor">
@@ -37,7 +48,11 @@
             <li class="vf-navigation__item">
               <a href="#" class="vf-navigation__link" label="Link 3"> Partners</a>
             </li>-->
-            <li class="vf-navigation__item">
+            
+		<li class="vf-navigation__item">
+			  <a href="./citeus.html" label="Cite us" class="vf-navigation__link"> Cite us</a>
+            </li>
+			<li class="vf-navigation__item">
               <a href="mailto:pathogensportalnl@erasmusmc.nl"  label="Contact" class="vf-navigation__link">Contact </a>
             </li>
 			            <li class="vf-navigation__item">
