--- a/src/pages/header - landing page.html
+++ b/src/pages/header - landing page.html
@@ -8,6 +8,17 @@
   -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" media="all" href="./css/styles.css" />
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1T1R6MPCGP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1T1R6MPCGP');
+</script>
+  
 </head>
 <body class="vf-body | vf-content">
 <div class="vf-body" id="topAnchor">
