--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -19,6 +19,8 @@
   gtag('config', 'G-1T1R6MPCGP');
 </script>
 
+
+<link rel="icon" type="image/png" href="images/pathogensportalnlfavicon.png">
 </head>
 <body class="vf-body | vf-content">
 <div class="vf-body" id="topAnchor">
