--- a/src/pages/footer.html
+++ b/src/pages/footer.html
@@ -127,7 +127,7 @@
                 </p>
 
 				 <p style="float:left; width: 15%; margin-right: 2%; margin-bottom: 0.5em;">
-				 <a href="https://www.jagersvereniging.nl">
+				 <a href="https://dwhc.nl/">
                     <img src="./images/logoDWHC.jpg" alt="DWHC" title="DWHC" style="width: 50%" /> 
                 </p>
 
