--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -83,12 +83,12 @@
 	    <section class="vf-card-container">
         <div class="vf-card-container__inner">
           <article class="vf-card vf-card-normal">
-            <a class="vf-card__link" label="Swiss and Norwegian national pathogens portals launched" href="https://www.pathogensportal.org/news/swiss-and-norwegian-national-pathogens-portals-launched?nid=173">
-              <img src="https://cms.pathogensportal.org/sites/default/files/2024-09/swiss%20and%20norway%20screenshot.jpg" alt="" class="vf-card__image" loading="lazy">
+            <a class="vf-card__link" label="Dutch Pathogens Portal launched" href="https://convergence.nl/dutch-pathogens-portal-launched/">
+              <img src="https://convergence.nl/app/uploads/spiraal-dna-pathogens-portal-scaled-2048x1536.jpeg" alt="" class="vf-card__image" loading="lazy">
             </a>
             <div class="vf-card__content">
               <h3 class="vf-card__title">
-                <a class="vf-card__link" label="Swiss and Norwegian national pathogens portals launched" href="https://www.pathogensportal.org/news/swiss-and-norwegian-national-pathogens-portals-launched?nid=173">Swiss and Norwegian national pathogens portals launched</a>
+                <a class="vf-card__link" label="Dutch Pathogens Portal launched" href="https://convergence.nl/dutch-pathogens-portal-launched/">Dutch Pathogens Portal launched</a>
               </h3>
                <!--<p class="vf-card__text">In this repository you will find the set of pictures collected by the MosquitoAlert project since 2014 for image classification tasks.</p>
              <a label="Sign up to participate" href="#" class="vf-link">Sign up to participate ></a>-->
