Large update EBI
Large update EBI, typos, banner, json datafile structure corrections

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -9,12 +9,21 @@
 
 A One Health approach, which integrates human, animal, and environmental health perspectives, is crucial in addressing these challenges. By facilitating the sharing of diverse data types across disciplines, this approach promotes a holistic understanding of pathogen dynamics and fosters coordinated research efforts to develop innovative solutions. Rapid and open data sharing not only enhances our ability to respond swiftly to health crises but also accelerates scientific discovery and strengthens global health security and preparedness.<p>
 <h3>Aims</h3>
-<p>The Pathogens Portal Netherlands was developed to support researchers in realizing this vision, by notably:
+<!--<p>The Pathogens Portal Netherlands was developed to support researchers in realizing this vision, by notably:
 
 Providing a one-stop resource for all Dutch pathogen data and projects.
 Fostering collaborations and synergies by creating a forum for discussion.
 Providing documentation and training material on FAIR research data management, especially for pathogen omics data.
-Showcasing Dutch resources that contribute to pathogen data sharing, access, analysis, and interpretation.</p>
+Showcasing Dutch resources that contribute to pathogen data sharing, access, analysis, and interpretation.</p>-->
+<p>The Pathogens Portal Netherlands was developed to support researchers in realizing this vision, by notably:</p>
+<ul>
+  <li>Providing a one-stop resource for all Dutch pathogen data and projects.</li>
+  <li>Fostering collaborations and synergies by creating a forum for discussion.</li>
+  <li>Providing documentation and training material on FAIR research data management, especially for pathogen omics data.</li>
+  <li>Showcasing Dutch resources that contribute to pathogen data sharing, access, analysis, and interpretation.</li>
+</ul>
+
+
 <h3>Acknowledgement</h3>
 <p>All publications using data or other content from Pathogens Portal Netherlands should include an acknowledgement to show that services of this portal (Pathogens Portal Netherlands, RRID:SCR_026710) have been used. Where datasets were used to conduct research, please acknowledge the original authors and their primary publications that are associated with the datasets.
 </p>
