--- a/src/pages/footer.html
+++ b/src/pages/footer.html
@@ -197,7 +197,7 @@
    -->
 	<div>
 	 <center>
-	  <p class="vf-footer__legal-text">Pathogens Portal Netherlands 2025 - This site was build by the Pandemic and Disaster Preparedness Center(PDPC) in collaboration with BY-COVID and Health-RI.</p>
+	  <p class="vf-footer__legal-text">Pathogens Portal Netherlands 2025 - This site was built by the Pandemic and Disaster Preparedness Center(PDPC) in collaboration with BY-COVID and Health-RI.</p>
 	  </center>
 	</div>
 	</hr>
