--- a/src/pages/isolates.html
+++ b/src/pages/isolates.html
@@ -13,7 +13,7 @@
 	<br>
 	<br>
 	<h4>Introduction viral isolates</h4>
-	<p>These viral isolates below are produced by Erasmus MC and available via the Euopean virus archive.</p>
+	<p>These viral isolates below are produced by Erasmus MC and available via the European virus archive.</p>
 
 	<!-- empty <p>At auctor urna nunc id cursus metus. Cursus vitae congue mauris rhoncus aenean. Condimentum vitae sapien pellentesque habitant. Rhoncus dolor purus non enim praesent elementum facilisis. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Ante metus dictum at tempor commodo ullamcorper. Cursus euismod quis viverra nibh cras pulvinar. Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Augue lacus viverra vitae congue eu. Pellentesque dignissim enim sit amet venenatis urna. Purus faucibus ornare suspendisse sed nisi lacus. Mauris a diam maecenas sed enim ut sem.</p>-->
 <br>
