CDC link and logo
CDC link and logo

--- a/src/pages/footer.html
+++ b/src/pages/footer.html
@@ -112,8 +112,8 @@
                 </p>
 				
 								 <p style="float:left; width: 15%; margin-right: 2%; margin-bottom: 0.5em;">
-				 <a href="https://www.cdc.gov/">
-                    <img src="./images/logocdc.jpg" alt="CDC" title="CDC" style="width: 50%" /> 
+				 <a href="https://www.uu.nl/">
+                    <img src="./images/UUlogo.png" alt="UU" title="UU" style="width: 50%" /> 
                 </p>
 				
 								 <p style="float:left; width: 15%; margin-right: 2%; margin-bottom: 0.5em;">
