--- a/src/pages/literature.html
+++ b/src/pages/literature.html
@@ -31,6 +31,8 @@ overview_geographic_regions: a map highlighting geographic regions that were par
 	<h3>Europe PMC advanced literature search</h3>
 	<h4><a href="https://europepmc.org/">https://europepmc.org/</a></h4>
 	<br>
+	<h3>CDC Arbovirus Catalog</h3>
+	<h4><a href="https://wwwn.cdc.gov/arbocat/">https://wwwn.cdc.gov/arbocat/</a></h4>
 	<br>
 	<br>
 	<!-- <ul>
